--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -41,26 +41,21 @@ ul {
 /* === NAVIGATION BAR === */
 header {
   position: fixed;
-  /*background-color: #ffffff;*/
-  background-color: red;
+  background-color: rgba(255,255,255,.95);
+  /*background-color: red;*/
   width: 100%;
   z-index: 999;
-  -webkit-transition: height 0.3s;
-  -moz-transition: height 0.3s;
-  -ms-transition: height 0.3s;
-  -o-transition: height 0.3s;
-  transition: height 0.3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  -webkit-transition: box-shadow 0s;
+  -moz-transition: box-shadow 0s;
+  -ms-transition: box-shadow 0s;
+  -o-transition: box-shadow 0s;
+  transition: box-shadow 0s;
 }
-
-#nav-container {
-  text-align: center;
-  padding: 2rem 4rem;
-  /*background: rgba(255,255,255,.5);*/
-  display: block;
-  overflow: hidden;
-  margin: 0 auto;
-}
-
 /*the site name in the navbar*/
 /*h1.site-name {
     max-width: 100px;
@@ -86,7 +81,44 @@ header h1 {
   position: absolute;
   font-weight: 300;
   line-height: 1.7rem;
+  -webkit-transition: all 0.1s;
+  -moz-transition: all 0.1s;
+  -ms-transition: all 0.1s;
+  -o-transition: all 0.1s;
+  transition: all 0.1s;
 }
+header img {
+  float: left;
+  -webkit-transition: all 0.1s;
+  -moz-transition: all 0.1s;
+  -ms-transition: all 0.1s;
+  -o-transition: all 0.1s;
+  transition: all 0.1s;
+}
+header.shrink {
+  height: 3rem;
+    padding: .5rem 0;
+  /*overflow: hidden;*/
+  -webkit-box-shadow: 0px 1px 10px -3px rgba(0,0,0,0.1);
+  -moz-box-shadow: 0px 1px 10px -3px rgba(0,0,0,0.1);
+  box-shadow: 0px 1px 10px -3px rgba(0,0,0,0.1);
+  -webkit-transition: box-shadow 0.3s;
+  -moz-transition: box-shadow 0.3s;
+  -ms-transition: box-shadow 0.3s;
+  -o-transition: box-shadow 0.3s;
+  transition: box-shadow 0.3s;
+}
+
+#nav-container {
+  text-align: center;
+  padding: 2rem 4rem;
+  /*background: rgba(255,255,255,.5);*/
+  display: block;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+
 
 nav ul {
   list-style-type: none;
@@ -112,10 +144,6 @@ nav li.dropdown {
 nav li a {
   display: block;
   cursor: pointer;
-}
-
-header img {
-  float: left;
 }
 
 nav .current {
@@ -183,24 +211,45 @@ nav .current .dropdown-content li a:hover {
 
 /* NAVIGATION BAR media queries */
 @media screen and (min-width: 64em) {
-  #nav-container {
-    max-width: 58rem;
-    padding: 1rem 3rem;
-  }
-  nav ul {
-    padding-top: 1rem;
+  header {
+    padding: 1rem 0;
   }
   header img {
     max-width: 3.2rem;
   }
+   
+  header.shrink img {
+    max-width: 1.8rem;
+  }
+  header.shrink h1 {
+    margin-left: 2.6rem;
+    font-size: .9rem;
+    line-height: 1.1rem;
+    letter-spacing: .02rem;
+  }
+  header.shrink nav ul {
+    padding-top: .2rem;
+  }
+  header.shrink nav ul li {
+    font-size: .7rem;
+    letter-spacing: .05rem;
+  }
+  header.shrink nav ul li a {
+    padding-bottom: .1rem;
+  }
+
+  #nav-container {
+    max-width: 58rem;
+    padding: 0 3rem;
+  }
+  nav ul {
+    padding-top: 1rem;
+  }
 }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
-  #nav-container {
-    padding: 1.2rem 4rem;
-  }
-  nav ul {
-    padding-top: .7rem;
+  header {
+    padding: 1rem 0;
   }
   header img {
     max-width: 2.6rem;
@@ -210,11 +259,37 @@ nav .current .dropdown-content li a:hover {
     margin-left: 4.1rem;
     line-height: 1.4rem;
   }
+  header.shrink img {
+    max-width: 1.8rem;
+  }
+  header.shrink h1 {
+    margin-left: 2.6rem;
+    font-size: .9rem;
+    line-height: 1.1rem;
+    letter-spacing: .02rem;
+  }
+  header.shrink nav ul {
+    padding-top: .2rem;
+  }
+  header.shrink nav ul li {
+    font-size: .7rem;
+    letter-spacing: .05rem;
+  }
+  header.shrink nav ul li a {
+    padding-bottom: .1rem;
+  }
+
+  #nav-container {
+    padding: 0 4rem;
+  }
+  nav ul {
+    padding-top: .7rem;
+  }
 }
 
 @media screen and (max-width: 42em) {
   #nav-container {
-    padding: 1.2rem 1rem;
+    padding: 0 1rem;
     overflow-x: hidden;
     max-width: 100%;
   }
@@ -231,6 +306,38 @@ nav .current .dropdown-content li a:hover {
     margin-left: 3.5rem;
     line-height: 1.4rem;
   }
+
+header {
+    padding: 1rem 0;
+  }
+  header img {
+    max-width: 2.6rem;
+  }
+  header h1 {
+    font-size: 1.15rem;
+    margin-left: 4.1rem;
+    line-height: 1.4rem;
+  }
+  header.shrink img {
+    max-width: 1.8rem;
+  }
+  header.shrink h1 {
+    margin-left: 2.6rem;
+    font-size: .9rem;
+    line-height: 1.1rem;
+    letter-spacing: .02rem;
+  }
+  header.shrink nav ul {
+    padding-top: .2rem;
+  }
+  header.shrink nav ul li {
+    font-size: .7rem;
+    letter-spacing: .05rem;
+  }
+  header.shrink nav ul li a {
+    padding-bottom: .1rem;
+  }
+
   nav ul {
     visibility: hidden;
     opacity: 0;
@@ -327,13 +434,33 @@ nav .current .dropdown-content li a:hover {
     cursor: pointer;
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' width='30px' height='30px' viewBox='0 0 30 30' enable-background='new 0 0 30 30' xml:space='preserve'><rect fill='#602480' width='30' height='6'/><rect fill='#602480' y='24' width='30' height='6'/><rect fill='#602480' y='12' width='30' height='6'/></svg>");
     background-size: contain;
+
+    -webkit-transition: all 0.1s;
+    -moz-transition: all 0.1s;
+    -ms-transition: all 0.1s;
+    -o-transition: all 0.1s;
+    transition: all 0.1s;
   }
   .nav-trigger:checked ~ ul {
     height: 100%;
     margin-top: 1rem;
-    padding: 1.2rem;
+    padding: .2rem 1.2rem 1.2rem 1.2rem;
     visibility: visible;
     opacity: 1;
+    background-color: rgba(255,255,255,.95);
+  }
+  header.shrink label[for="nav-trigger"] {
+    top: .9rem;
+    -webkit-transition: all 0.1s;
+    -moz-transition: all 0.1s;
+    -ms-transition: all 0.1s;
+    -o-transition: all 0.1s;
+    transition: all 0.1s;
+  }
+  header.shrink .nav-trigger:checked ~ ul {
+    margin-top: .3rem;
+    /*border: none;*/
+    /*background-color: rgba(255,255,255,.95);*/
   }
 }
 
